--- a/labs/week_2_huggingface_basics.ipynb
+++ b/labs/week_2_huggingface_basics.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# Fill-mask\n",
     "mlm = pipeline('fill-mask', model='bert-base-uncased', device_map='auto')\n",
-    "mlm('Paris is the [MASK] of France.')\n"
+    "mlm('Marseille is the real [MASK] of France.')\n"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "source": [
     "# Text generation (small model for speed)\n",
     "gen = pipeline('text-generation', model='gpt2', device_map='auto')\n",
-    "gen('Once upon a time', max_new_tokens=40, do_sample=True, temperature=0.8)"
+    "gen('Tell me a joke about the people of Marseille:', max_new_tokens=40, do_sample=True, temperature=0.1)"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "lm_id = 'gpt2'  # small demo model\n",
     "tok_lm = AutoTokenizer.from_pretrained(lm_id)\n",
     "lm = AutoModelForCausalLM.from_pretrained(lm_id)\n",
-    "inputs = tok_lm('In data science, transformers are', return_tensors='pt')\n",
+    "inputs = tok_lm('Tell me a joke about the people of Marseille', return_tensors='pt')\n",
     "out = lm.generate(**inputs, max_new_tokens=64, do_sample=True, temperature=0.7, top_p=0.9)\n",
     "print(tok_lm.decode(out[0], skip_special_tokens=True))\n"
    ]
@@ -268,36 +268,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load a dataset \n",
-    "ds = load_dataset('imdb', split='test[:2%]')\n",
-    "# Tokenizer and model for sequence classification\n",
-    "tok_cls = AutoTokenizer.from_pretrained('distilbert-base-uncased-finetuned-sst-2-english')\n",
-    "mdl_cls = AutoModelForSequenceClassification.from_pretrained('distilbert-base-uncased-finetuned-sst-2-english', device_map='auto')\n",
+    "import torch\n",
+    "from datasets import load_dataset\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import time\n",
+    "import numpy as np\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "# Preprocessing function to tokenize text\n",
-    "def preprocess(batch):\n",
-    "    return tok_cls(batch['text'], truncation=True, padding=True)\n",
+    "# ...existing imports...\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import psutil  # for RAM monitoring\n",
     "\n",
-    "# Tokenize the entire dataset\n",
-    "ds_tok = ds.map(preprocess, batched=True)\n",
+    "def measure_memory_cpu():\n",
+    "    \"\"\"Get current memory usage in MB\"\"\"\n",
+    "    process = psutil.Process()\n",
+    "    return process.memory_info().rss / 1024 / 1024\n",
     "\n",
-    "# Prediction function to run the model and get predictions\n",
-    "def predict(batch):\n",
-    "    # Extract relevant keys and convert to tensors\n",
-    "    keep = {k: batch[k] for k in ['input_ids', 'attention_mask'] if k in batch}\n",
-    "    # Move tensors to the same device as the model\n",
-    "    tens = {k: torch.tensor(v).to(mdl_cls.device) for k, v in keep.items()}\n",
+    "def process_with_detailed_metrics(dataset, batch_size):\n",
+    "    \"\"\"Process with detailed per-batch metrics\"\"\"\n",
+    "    t0 = time.perf_counter()\n",
+    "    predictions = []\n",
+    "    memory_usage = []\n",
+    "    batch_times = []\n",
+    "    batch_accuracies = []\n",
     "    \n",
-    "    with torch.no_grad():\n",
-    "        outputs = mdl_cls(**tens)\n",
-    "        # Move predictions back to CPU for dataset storage\n",
-    "        predictions = outputs.logits.argmax(-1).cpu().tolist()\n",
+    "    for i in tqdm(range(0, len(dataset), batch_size)):\n",
+    "        batch = dataset[i:i + batch_size]\n",
+    "        batch_t0 = time.perf_counter()\n",
+    "        \n",
+    "        # Record memory before batch\n",
+    "        if torch.cuda.is_available():\n",
+    "            torch.cuda.reset_peak_memory_stats()\n",
+    "        mem_before = measure_memory_cpu()\n",
+    "        \n",
+    "        # Process batch\n",
+    "        inputs = tokenizer(batch['sentence'], \n",
+    "                         padding=True,\n",
+    "                         truncation=True, \n",
+    "                         return_tensors='pt').to(model.device)\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            output = model(**inputs)\n",
+    "            preds = output.logits.argmax(-1).cpu().tolist()\n",
+    "            predictions.extend(preds)\n",
+    "        \n",
+    "        # Record metrics\n",
+    "        batch_time = time.perf_counter() - batch_t0\n",
+    "        batch_times.append(batch_time)\n",
+    "        \n",
+    "        # Memory delta\n",
+    "        mem_after = measure_memory_cpu()\n",
+    "        memory_delta = mem_after - mem_before\n",
+    "        if torch.cuda.is_available():\n",
+    "            memory_delta += torch.cuda.max_memory_allocated() / 1024 / 1024\n",
+    "        memory_usage.append(memory_delta)\n",
+    "        \n",
+    "        # Batch accuracy\n",
+    "        batch_acc = accuracy_score(batch['label'], preds)\n",
+    "        batch_accuracies.append(batch_acc)\n",
     "    \n",
-    "    return {'pred': predictions}\n",
+    "    total_time = time.perf_counter() - t0\n",
+    "    \n",
+    "    return {\n",
+    "        'predictions': predictions,\n",
+    "        'total_time': total_time,\n",
+    "        'batch_times': batch_times,\n",
+    "        'memory_usage': memory_usage,\n",
+    "        'batch_accuracies': batch_accuracies,\n",
+    "        'avg_batch_time': np.mean(batch_times),\n",
+    "        'avg_memory': np.mean(memory_usage),\n",
+    "        'avg_accuracy': np.mean(batch_accuracies)\n",
+    "    }\n",
     "\n",
-    "# Run predictions with smaller batch size for stability\n",
-    "preds = ds_tok.map(predict, batched=True, batch_size=8)\n",
-    "preds[:5]"
+    "# Test different batch sizes\n",
+    "batch_sizes = [1, 8, 32, 64]\n",
+    "results = {}\n",
+    "\n",
+    "for bs in batch_sizes:\n",
+    "    print(f\"\\nProcessing with batch_size={bs}\")\n",
+    "    results[bs] = process_with_detailed_metrics(ds, bs)\n",
+    "\n",
+    "# Print summary\n",
+    "print(\"\\nDetailed Comparison:\")\n",
+    "print(f\"{'Batch Size':>10} {'Memory (MB)':>12} {'Time (s)':>10} {'Accuracy':>10}\")\n",
+    "print(\"-\" * 45)\n",
+    "for bs in batch_sizes:\n",
+    "    r = results[bs]\n",
+    "    print(f\"{bs:>10} {r['avg_memory']:>12.1f} {r['avg_batch_time']:>10.3f} {r['avg_accuracy']:>10.3f}\")"
    ]
   },
   {
