--- a/labs/week_3_effective_llm_use.ipynb
+++ b/labs/week_3_effective_llm_use.ipynb
@@ -371,6 +371,15 @@
         "### Exercice\n",
         "Play with the above code generation model. How far can you push it?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e1589438",
+      "metadata": {},
+      "source": [
+        "### Exercice\n",
+        "Use the techniques of your choice to analyse the dataset `\\data\\weightHeightSex.txt`.  "
+      ]
     }
   ],
   "metadata": {
