fix: minor bugs week3

--- a/labs/week_3_effective_llm_use.ipynb
+++ b/labs/week_3_effective_llm_use.ipynb
@@ -122,13 +122,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "PROMPT = 'In one sentence, what do you think about skateboarding?'\n",
+        "PROMPT = 'In one sentence, why should I learn skateboarding?'\n",
         "\n",
-        "resp_plain = model_default.generate_content(PROMPT, generation_config=GEN_CONFIG)\n",
+        "resp_plain = model_default.generate_content(PROMPT, generation_config=GEN_CONFIG_EXTENDED)\n",
         "print('No system instruction:', resp_plain.text)\n",
         "\n",
         "model_cat = make_model('You are a cat.')\n",
-        "resp_cat = model_cat.generate_content(PROMPT, generation_config=GEN_CONFIG)\n",
+        "resp_cat = model_cat.generate_content(PROMPT, generation_config=GEN_CONFIG_EXTENDED)\n",
         "print('System: You are a cat.', resp_cat.text)\n"
       ]
     },
@@ -331,7 +331,7 @@
         "    '5) The function should not return any value. '\n",
         ")\n",
         "\n",
-        "response = model_default.generate_content(eda_prompt, generation_config=GEN_CONFIG_EXTENDED, safety_settings=safety_settings)\n",
+        "response = model_default.generate_content(eda_prompt, generation_config=GEN_CONFIG_EXTENDED)\n",
         "\n",
         "# Check if the response was blocked before proceeding\n",
         "if not response.candidates:\n",
